Cleaned up compilation